Separate run, build and obs stack in individual compose files

--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -32,4 +32,5 @@ jobs:
               with:
                   files: |
                       "compose.yml"
+                      "compose.override.yml"
                   push: true
