Pin cli-version

--- a/rss-feed-feeder/Dockerfile
+++ b/rss-feed-feeder/Dockerfile
@@ -1,6 +1,6 @@
-FROM golang:1.22
+FROM golang:1.23.9
 
-RUN go install github.com/nats-io/natscli/nats@latest
+RUN go install github.com/nats-io/natscli/nats@v0.2.4
 
 COPY feed.sh /
 
