--- a/rss-feed-feeder/Dockerfile
+++ b/rss-feed-feeder/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.23.9
 
-RUN go install github.com/nats-io/natscli/nats@v0.2.4
+# versions > 0.2.2 causes bash switch statement to not work anymore?!
+RUN go install github.com/nats-io/natscli/nats@v0.2.2
 
 COPY feed.sh /
 
