--- a/compose.override.yml
+++ b/compose.override.yml
@@ -15,6 +15,12 @@ services:
             context: golang/.
             args:
                 - MAIN=article-feeder
+    news-feeder:
+        build:
+            <<: *build
+            context: golang/.
+            args:
+                - MAIN=news-feeder
     keyword-matcher:
         build:
             <<: *build
@@ -27,3 +33,13 @@ services:
             context: golang/.
             args:
                 - MAIN=raindrop-integration
+    nats-indexer:
+        build:
+            <<: *build
+            context: python/.
+            target: nats-indexer
+    search-mcp-server:
+        build:
+            <<: *build
+            context: python/.
+            target: search-mcp-server
