--- a/compose.yml
+++ b/compose.yml
@@ -10,6 +10,8 @@ services:
         command: '--jetstream --http_port 8222 --store_dir /data'
     fullfeedrss:
         image: docker.io/heussd/fivefilters-full-text-rss:latest
+        mem_limit: 2G
+        restart: always
         deploy:
             replicas: 2
         environment:
