--- a/compose.yml
+++ b/compose.yml
@@ -31,7 +31,7 @@ services:
     feed-feeder:
         image: ghcr.io/heussd/nats-news-analysis/feed-feeder:latest
         environment:
-            - NATS_SERVER=http://nats-server:4222
+            - NATS_URL=http://nats-server:4222
         volumes:
             - type: bind
               source: ./urls.txt
@@ -43,26 +43,26 @@ services:
         deploy:
             replicas: 3
         environment:
-            - 'NATS_SERVER=nats-server:4222'
+            - 'NATS_URL=nats-server:4222'
         restart: always
     news-feeder:
         deploy:
             replicas: 2
         image: ghcr.io/heussd/nats-news-analysis/news-feeder:latest
         environment:
-            - 'NATS_SERVER=nats-server:4222'
+            - 'NATS_URL=nats-server:4222'
             - 'FULLTEXTRSS_SERVER=http://loadbalancer:80'
     keyword-matcher:
         deploy:
             replicas: 6
         image: ghcr.io/heussd/nats-news-analysis/keyword-matcher:latest
         environment:
-            - 'NATS_SERVER=nats-server:4222'
+            - 'NATS_URL=nats-server:4222'
             - KEYWORDS_FILE_URL=${KEYWORDS_FILE_URL}
     raindrop-integration:
         image: ghcr.io/heussd/nats-news-analysis/raindrop-integration:latest
         environment:
-            - 'NATS_SERVER=nats-server:4222'
+            - 'NATS_URL=nats-server:4222'
             - 'RAINDROP_COLLECTION=${RAINDROP_COLLECTION}'
             - 'RAINDROP_ACCESS_TOKEN=${RAINDROP_ACCESS_TOKEN}'
     nats-indexer:
@@ -70,7 +70,7 @@ services:
             replicas: 2
         image: ghcr.io/heussd/nats-news-analysis/nats-indexer:latest
         environment:
-            - 'NATS_SERVER=nats-server:4222'
+            - 'NATS_URL=nats-server:4222'
             - 'AI_SEARCH_ENDPOINT=${AI_SEARCH_ENDPOINT}'
             - 'AI_SEARCH_API_KEY=${AI_SEARCH_API_KEY}'
             - 'AI_SEARCH_API_VERSION=${AI_SEARCH_API_VERSION}'
