MCP-Server for consuming and operating on news

--- a/.devcontainer/golang/devcontainer.json
+++ b/.devcontainer/golang/devcontainer.json
@@ -1,7 +1,7 @@
 {
-    "name": "ⁿⁿᵃ",
+    "name": "Golang",
     "dockerComposeFile": [
-        "../compose.yml", // First file determines root
+        "../../compose.yml", // First file determines root
         "./compose.yml"
     ],
     "service": "devcontainer",
