--- a/.devcontainer/python/devcontainer.json
+++ b/.devcontainer/python/devcontainer.json
@@ -37,7 +37,7 @@
         }
     },
     "containerEnv": {
-        "GOROOT2": "./python"
+        "NATS_URL": "http://nats-server:4222"
     },
     "shutdownAction": "stopCompose"
 }
