--- a/python/Makefile
+++ b/python/Makefile
@@ -1,2 +1,9 @@
 pub-article:
 	nats pub article-urls "{\"url\": \"https://www.tagesschau.de/ausland/indien-satellit-102.html\"}"
+
+5:
+	$(MAKE) pub-article
+	$(MAKE) pub-article
+	$(MAKE) pub-article
+	$(MAKE) pub-article
+	$(MAKE) pub-article
