--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -9,6 +9,7 @@ on:
             - 'architecture.drawio'
             - 'architecture.drawio.svg'
             - '**.png'
+            - '**.http'
 jobs:
     bake:
         runs-on: ubuntu-latest
