Retrieve URLs from cloud, reimplement feed-feeder in go

--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,10 @@
-AI_SEARCH_ENDPOINT=
-AI_SEARCH_API_KEY=
-AI_SEARCH_API_VERSION=
+KEYWORDS_FILE_URL=
+URLS_URL=
 
 RAINDROP_ACCESS_TOKEN=
 RAINDROP_COLLECTION=
-KEYWORDS_FILE_URL=
+
+AI_SEARCH_ENDPOINT=
+AI_SEARCH_API_KEY=
+AI_SEARCH_API_VERSION=
+EMBEDDING_MODEL_NAME=
