--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
-KEYWORDS_FILE_URL=
 URLS_URL=
+KEYWORDS_FILE_URL=
 
 RAINDROP_ACCESS_TOKEN=
 RAINDROP_COLLECTION=
@@ -7,4 +7,6 @@ RAINDROP_COLLECTION=
 AI_SEARCH_ENDPOINT=
 AI_SEARCH_API_KEY=
 AI_SEARCH_API_VERSION=
+AI_SEARCH_INDEX_NAME=index
 EMBEDDING_MODEL_NAME=
+RAINDROP_RSS_FEED=
