--- a/compose.yml
+++ b/compose.yml
@@ -10,7 +10,7 @@ services:
         command: '--jetstream --http_port 8222 --store_dir /data'
     fullfeedrss:
         image: docker.io/heussd/fivefilters-full-text-rss:latest
-        mem_limit: 2G
+        mem_limit: 3G
         restart: always
         deploy:
             replicas: 2
@@ -19,17 +19,9 @@ services:
             - FTR_ADMIN_PASSWORD=
         volumes:
             - 'rss-cache:/var/www/html/cache'
-
-    loadbalancer:
-        image: docker.io/nginx
-        volumes:
-            - './loadbalancer/nginx.conf:/etc/nginx/nginx.conf'
-        depends_on:
-            - fullfeedrss
-        ports:
-            - '8080:80'
     feed-feeder:
         image: ghcr.io/heussd/nats-news-analysis/feed-feeder:latest
+        restart: always
         environment:
             - NATS_URL=http://nats-server:4222
             - URLS_URL=${URLS_URL}
@@ -38,31 +30,38 @@ services:
         deploy:
             replicas: 3
         environment:
-            - 'NATS_URL=nats-server:4222'
+            - NATS_URL=nats-server:4222
         restart: always
     news-feeder:
         deploy:
             replicas: 2
+        restart: always
         image: ghcr.io/heussd/nats-news-analysis/news-feeder:latest
         environment:
-            - 'NATS_URL=nats-server:4222'
-            - 'FULLTEXTRSS_SERVER=http://loadbalancer:80'
+            - NATS_URL=nats-server:4222
+            - FULLTEXTRSS_SERVER=http://fullfeedrss:80
     keyword-matcher:
         deploy:
             replicas: 6
+        restart: always
         image: ghcr.io/heussd/nats-news-analysis/keyword-matcher:latest
         environment:
-            - 'NATS_URL=nats-server:4222'
+            - NATS_URL=nats-server:4222
             - KEYWORDS_FILE_URL=${KEYWORDS_FILE_URL}
+            - NATS_SUBSCRIBE_SUBJECT=news.*
+            - NATS_CONSUMER=default
+            - NATS_PUBLISH_SUBJECT=match-urls
     raindrop-integration:
         image: ghcr.io/heussd/nats-news-analysis/raindrop-integration:latest
+        restart: always
         environment:
-            - 'NATS_URL=nats-server:4222'
-            - 'RAINDROP_COLLECTION=${RAINDROP_COLLECTION}'
-            - 'RAINDROP_ACCESS_TOKEN=${RAINDROP_ACCESS_TOKEN}'
+            - NATS_URL=nats-server:4222
+            - RAINDROP_COLLECTION=${RAINDROP_COLLECTION}
+            - RAINDROP_ACCESS_TOKEN=${RAINDROP_ACCESS_TOKEN}
     nats-indexer:
         deploy:
             replicas: 1
+        restart: always
         image: ghcr.io/heussd/nats-news-analysis/nats-indexer:latest
         environment:
             - 'NATS_URL=nats-server:4222'
@@ -82,6 +81,7 @@ services:
             - 'RAINDROP_RSS_FEED=${RAINDROP_RSS_FEED}'
     watchtower:
         image: containrrr/watchtower
+        restart: always
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
         command: --interval 7200
